--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
-
+GameDefaultMap=/Game/Scenes/Jonathan_Demo_Map.Jonathan_Demo_Map
+EditorStartupMap=/Game/Scenes/Jonathan_Demo_Map.Jonathan_Demo_Map
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
