--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -73,3 +73,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 +CollisionChannelRedirects=(OldName="Selectable",NewName="SelectableTrace")
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=False
+
